--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    // Static Asset Handling
+    "types": ["vite/client"],
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
