--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^5.15.15",
     "gsap": "^3.12.5",
     "localforage": "^1.10.0",
